--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,7 @@
-Makefile.in
-aclocal.m4
-autom4te.cache/output.1
-autom4te.cache/output.3
-autom4te.cache/requests
-autom4te.cache/traces.1
-autom4te.cache/traces.3
-configure
-src/Makefile.in
-tests/Makefile.in
-autom4te.cache/output.4
-autom4te.cache/traces.4
-autoscan.log
-configure.scan
+/*
+!configure.ac
+!Makefile.am
+!/src/
+/src/Makefile.in
+!/tests/
+/tests/Makefile.in
