Edited again gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,18 @@
-/Makefile
+/autom4te.cache
 /config.h
 /config.log
 /config.status
 /libtool
+/Makefile
+/Makefile.in
 /src/.deps
+/src/.libs
 /src/Makefile
 /stamp-h1
 /tests/.deps
-/tests/Makefile
-
-/src/.libs
 /tests/.libs
+/tests/Makefile
 /tests/test
-/tests/test-suite.log
 /tests/test.log
+/tests/test-suite.log
 /tests/test.trs
