--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
-/autom4te.cache
-/config.h
-/config.log
-/config.status
-/libtool
-/Makefile
-/Makefile.in
-/src/.deps
-/src/.libs
-/src/Makefile
-/stamp-h1
-/tests/.deps
-/tests/.libs
-/tests/Makefile
-/tests/test
-/tests/test.log
-/tests/test-suite.log
-/tests/test.trs
+Makefile.in
+autom4te.cache
+config.h
+config.log
+config.status
+libtool
+Makefile
+src/.deps
+src/.libs
+src/Makefile
+stamp-h1
+tests/.deps
+tests/.libs
+tests/Makefile
+tests/test
+tests/test.log
+tests/test-suite.log
+tests/test.trs
