Added library used for logging

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-lib_LTLIBRARIES = libauth.la libcolor.la
+lib_LTLIBRARIES = libauth.la libcolor.la liblog_file.la
 libauth_la_SOURCES = auth.c
 libauth_la_CFLAGS = `pkg-config --cflags glib-2.0`
 libauth_la_LDFLAGS = `pkg-config --libs glib-2.0`
@@ -6,3 +6,5 @@ libauth_la_LDFLAGS = `pkg-config --libs glib-2.0`
 libcolor_la_SOURCES = color.c
 libcolor_la_CFLAGS = `pkg-config --cflags glib-2.0`
 libcolor_la_LDFLAGS = `pkg-config --libs glib-2.0`
+
+liblog_file_la_SOURCES = log_file.c
